...
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left_arrow" />

    <Button
        android:id="@+id/btnSave"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
...
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintWidth_max="320dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/oldPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>
...
        app:layout_constraintTop_toBottomOf="@+id/editOldPassword"
        app:layout_constraintWidth_max="320dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>
...
        app:layout_constraintTop_toBottomOf="@+id/editNewPassword"
        app:layout_constraintWidth_max="320dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPasswordTextConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvPasswordMismatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/passwords_do_not_match"
        android:textColor="@color/red"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/btnSave"
        app:layout_constraintTop_toBottomOf="@+id/btnSave" />
    <TextView
        android:id="@+id/tvInvalidPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/passwords_do_not_match"
        android:textColor="@color/red"
        android:textSize="14sp"
...
